<resources>
    <string name="app_name">ReservationEnhanced</string>
    <string name="name">Name:</string>
    <string name="telly">Telephone:</string>
    <string name="soz">Size:</string>
    <string name="smk">Smoking</string>
    <string name="day">Day:</string>
    <string name="rsr">Reserve</string>
    <string name="Rstst">Reset</string>
    <string name="timebomb">Time:</string>
</resources>
